# save_roi

./: .gitignore  LICENSE  QUICK_START.md  README.md  pyproject.toml
docs/: advanced.md  api.md  cli.md
notebooks/: example.sh  example_usage.ipynb
scripts/: save_roi.ljm  save_roi.sh  setup_test_data.py
src/save_roi/: __init__.py  cli.py  core.py
src/spectral_roi/: __init__.py  cli.py  core.py  interactive.py
tests/: test_core.py  test_discovery.py  test_interactive.py  test_multi_folder.py
