[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "save-roi"
version = "0.1.0"
description = "Extract spectral data from TIFF stacks using ImageJ ROIs or automated grid-based analysis"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "tifffile>=2021.0.0",
    "roifile>=2021.0.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
]

[project.scripts]
save-roi = "spectral_roi.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/save_roi"
Documentation = "https://github.com/yourusername/save_roi#readme"
Repository = "https://github.com/yourusername/save_roi"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
